added game class

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -13,10 +13,12 @@
 
   <!-- include source files here... -->
   <script type="text/javascript" src="src/pin.js"></script>
-  
-
+  <script type="text/javascript" src="src/frame.js"></script>
+  <script type="text/javascript" src="src/game.js"></script>
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/pin_spec.js"></script>
+  <script type="text/javascript" src="spec/frame_spec.js"></script>
+  <script type="text/javascript" src="spec/game_spec.js"></script>
 
 </head>
 
