added and configured tenthFrame files

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -15,10 +15,12 @@
   <script type="text/javascript" src="./src/pin.js"></script>
   <script type="text/javascript" src="./src/frame.js"></script>
   <script type="text/javascript" src="./src/game.js"></script>
+  <script type="text/javascript" src="./src/tenthFrame.js"></script>
   <!-- include spec files here... -->
   <script type="text/javascript" src="./spec/pin_spec.js"></script>
   <script type="text/javascript" src="./spec/frame_spec.js"></script>
   <script type="text/javascript" src="./spec/game_spec.js"></script>
+  <script type="text/javascript" src="./spec/tenthFrame_spec.js"></script>
 
 </head>
 
